--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Bootstrap</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light">
+        
+        <a class="navbar-brand" href="#"> <img src="img/0.jpg" width="220" height="80"></a>
+
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> Quem Somos</a>
+                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> Parceiros</a>
+                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> Serviços</a>
+                        </li>
+                    </ul>
+                </div>
+        </nav>   
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+              <h3>Quem Somos</h3>
+              <img src="img/agricultura-no-campo-copia.jpg" alt="" class="rounded-circle" width="400" height="400">
+            </div>
+        </section>
 </body>
 </html>
